--- a/Vision_Pharmacy/App.config
+++ b/Vision_Pharmacy/App.config
@@ -64,6 +64,9 @@
             <setting name="CompanyTel" serializeAs="String">
                 <value>الهاتف</value>
             </setting>
+            <setting name="ChangeLang" serializeAs="String">
+                <value>Ar</value>
+            </setting>
         </Vision_Pharmacy.Properties.Settings>
     </userSettings>
 </configuration>
