--- a/Vision_Pharmacy/Properties/Settings.settings
+++ b/Vision_Pharmacy/Properties/Settings.settings
@@ -59,5 +59,8 @@
     <Setting Name="CompanyTel" Type="System.String" Scope="User">
       <Value Profile="(Default)">الهاتف</Value>
     </Setting>
+    <Setting Name="ChangeLang" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Ar</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
