--- a/Vision_Pharmacy/Vision_Pharmacy.csproj
+++ b/Vision_Pharmacy/Vision_Pharmacy.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="DevExpress.Win.Design" Version="24.2.7" />
+    <PackageReference Include="EPPlus" Version="8.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -75,6 +76,11 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Gui\FinancialTransactionGui\Profits\" />
+    <Folder Include="Gui\RepportsGui\" />
   </ItemGroup>
 
 </Project>
